Django User Profile

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<form action="{% url 'accounts:change_password' username=user %}" method="post">
-		{% csrf_token %}
-		{{ form }}
-		<button type="submit">Submit</button>
-	</form>
+    <form action="{% url 'accounts:change_password' user_id=user.id %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">Submit</button>
+    </form>
 {% endblock %}
