--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<form enctype="multipart/form-data" action= "{% url 'accounts:edit_profile' username=username %}" method="post">
+	<form enctype="multipart/form-data" action= "{% url 'accounts:edit_profile' user_id=user.id %}" method="post">
 		{% csrf_token %}
 		{{ user_form }}
 		{{ profile_form }}
