--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -255,7 +255,6 @@ body {
 
 /* line 10, ../sass/circle/core/layout.sass */
 .grid, .grid-5, .grid-10, .grid-15, .grid-20, .grid-25, .grid-30, .grid-33, .grid-35, .grid-40, .grid-45, .grid-50, .grid-55, .grid-60, .grid-65, .grid-66, .grid-70, .grid-75, .grid-80, .grid-90, .grid-95, .grid-100 {
-  float: left;
   box-sizing: border-box;
   position: relative;
 }
@@ -461,6 +460,7 @@ body {
 }
 /* line 16, ../sass/circle/core/layout.sass */
 .grid-50 {
+  text-align: center;
   width: 50%;
   padding: 0 15px;
 }
@@ -664,6 +664,7 @@ body {
   width: 80%;
   padding: 0 15px;
   text-align: center;
+  margin: auto;
 }
 /* line 22, ../sass/circle/core/layout.sass */
 .grid-pull-100 {
@@ -1238,6 +1239,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 
 /* line 8, ../sass/circle/core/utilities.sass */
 .centered {
+  text-align: center;
   float: none;
   margin: 0 auto;
   clear: both;
