Django User Profile Project

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-    <form action="{% url 'accounts:change_password' user_id=user.id %}" method="post">
+    <form action="{% url 'accounts:change_password' %}" method="post">
         {% csrf_token %}
         {{ form }}
         <button type="submit">Submit</button>
